--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class='top-left-icon pull-left'>
 							<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_phone'></use></svg>
 						</div>
-						<a>Call: 182 2408 8983</a>
+						<a>Phone: 182 2408 8983</a>
 						<div class='top-left-icon pull-left'>
 							<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_email'></use></svg>
 						</div>
@@ -128,7 +128,7 @@
 						<div class='foot-icon'>
 							<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_email'></use></svg>
 						</div>
-						<a>Comment: </a><i>670292548@qq.com</i>
+						<a>Email: </a><i>670292548@qq.com</i>
 					</div>
 				</div>
 			</div>
