--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Studease.cn</title>
+	<title>StudEase.cn</title>
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/global.css" />
 	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 600px)" href="css/small.css" />
@@ -51,7 +51,7 @@
 				<div id='nav-bar' class='nav-bar'>
 					<div class='container center'>
 						<div class='logo pull-left'>
-							<a href='index.html'>Studease.cn</a>
+							<a href='index.html'>StudEase.cn</a>
 						</div>
 						<nav class='nav-menu pull-right'>
 							<ul>
@@ -146,7 +146,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<script>
 		window._bd_share_config = {
-			"common":{"bdSnsKey":{},"bdDesc":"desc","bdText":"","bdComment":"test comment","bdPic":"http://www.baidu.com/img/bd_logo1.png","bdMini":"2","bdStyle":"0","bdSize":"16"},"share":{},
+			"common":{"bdSnsKey":{},"bdDesc":"StudEase.cn is now available as github pages. Come to contribute!","bdText":"StudEase.cn","bdComment":"Great github!","bdPic":"","bdMini":"2","bdStyle":"0","bdSize":"16"},"share":{},
 			"image":{"viewList":["qzone","tsina","tqq","sqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},
 			"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","sqq","renren","weixin"]}
 		};
