--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<script>
 		window._bd_share_config = {
-			"common":{"bdSnsKey":{},"bdDesc":"StudEase.cn is now available as github pages. Come to contribute!","bdText":"StudEase.cn","bdComment":"Great github!","bdPic":"","bdMini":"2","bdStyle":"0","bdSize":"16"},"share":{},
+			"common":{"bdSnsKey":{},"bdDesc":"GitHub: https://github.com/studease","bdText":"StudEase.cn","bdComment":"StudEase.cn is now available as github pages. Come & contribute!","bdPic":"","bdMini":"2","bdStyle":"0","bdSize":"16"},"share":{},
 			"image":{"viewList":["qzone","tsina","tqq","sqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},
 			"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","sqq","renren","weixin"]}
 		};
