--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 	</div>
 	
 	<div class='wrap'>
-		<header id='header'>
+		<header id='header' class="clear">
 			<div class='top-bar'>
 				<div class='container center'>
 					<div class='top-left pull-left'>
 						<div class='top-left-icon pull-left'>
 							<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_phone'></use></svg>
 						</div>
-						<a>Phone: 182 2408 8983</a>
+						<a class='pull-left'>Phone: 182 2408 8983</a>
 						<div class='top-left-icon pull-left'>
 							<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_email'></use></svg>
 						</div>
-						<a>Email: 670292548@qq.com</a>
+						<a class='pull-left'>Email: 670292548@qq.com</a>
 					</div>
 					<div class='top-right pull-right'>
 						<div class="bdsharebuttonbox">
@@ -47,7 +47,7 @@
 				</div>
 			</div>
 			
-			<div class='nav-bar'>
+			<div class='nav-bar clear'>
 				<div id='nav-bar' class='nav-bar'>
 					<div class='container center'>
 						<div class='logo pull-left'>
@@ -95,7 +95,7 @@
 			</div>
 		</header>
 		
-		<div id='main'>
+		<div id='main' class="clear">
 			<div id='slicease' class='slicease'>
 				<div class='container center'>
 					<canvas id='canvas' width='960' height='500'>Canvas not supported!</canvas>
@@ -106,7 +106,7 @@
 			</div>
 		</div>
 		
-		<footer id='footer'>
+		<footer id='footer' class="clear">
 			<div class='footer-main'>
 				<div class='container center'>
 					<div class='friendly-links pull-left'>
