--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								<li>
 									<a href="#">Open-sourced<i class='arrow'></i></a>
 									<ul>
-										<li><a href='#'>Slicease.js (MIT)</a></li>
+										<li><a target='_blank' href='https://github.com/studease/Slicease'>Slicease.js (MIT)</a></li>
 									</ul>
 								</li>
 								<li>
