--- a/index.html
+++ b/index.html
@@ -140,9 +140,17 @@
 			</div>
 		</footer>
 	</div>
+	<script type="text/javaScript" src="js/cn/studease/globle.js"></script>
 	<script type="text/javaScript" src="js/cn/studease/utils/Func.js"></script>
 	<script type="text/javaScript" src="js/cn/studease/utils/Timer.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/slicease/Slicease.0.0.2.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/utils/P.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/animation/RepeatBehavior.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/animation/TimingFunction.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/animation/Animation.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/animation/easing/Bezier.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/animation/easing/CubicBezier.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/animation/easing/Ease.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/slicease/Slicease.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script>
 		window._bd_share_config = {
