--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
 	<script type="text/javaScript" src="js/cn/studease/animation/easing/Bezier.js"></script>
 	<script type="text/javaScript" src="js/cn/studease/animation/easing/CubicBezier.js"></script>
 	<script type="text/javaScript" src="js/cn/studease/animation/easing/Ease.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/animation/easing/Linear.js"></script>
 	<script type="text/javaScript" src="js/cn/studease/slicease/Slicease.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script>
