--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<script>
 		window._bd_share_config = {
-			"common":{"bdSnsKey":{},"bdDesc":"Studease 1.0 上线了\\o/ \n项目地址: https://github.com/studease/Slicease","bdText":"StudEase.cn","bdComment":"StudEase.cn已同步更新，猛戳这里看效果!（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）","bdPic":"","bdMini":"2","bdStyle":"0","bdSize":"16"},"share":{},
+			"common":{"bdSnsKey":{},"bdDesc":"Studease.js 1.0 上线了\\o/ \n项目地址: https://github.com/studease/Slicease","bdText":"StudEase.cn","bdComment":"StudEase.cn已同步更新，猛戳这里看效果!（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）","bdPic":"","bdMini":"2","bdStyle":"0","bdSize":"16"},"share":{},
 			"image":{"viewList":["qzone","tsina","tqq","sqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},
 			"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","sqq","renren","weixin"]}
 		};
