--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 								<li>
 									<a href="#">Sub Sites<i class='arrow'></i></a>
 									<ul>
+										<li><a href='http://py.studease.cn/'>Python</a></li>
 										<li><a href='#'>Decoration</a></li>
 										<li><a href='#'>Note Trade</a></li>
 									</ul>
