--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 			</div>
 		</footer>
 	</div>
-	<script type="text/javaScript" src="js/cn/studease/globle.js"></script>
+	<script type="text/javaScript" src="js/cn/studease/global.js"></script>
 	<script type="text/javaScript" src="js/cn/studease/utils/Func.js"></script>
 	<script type="text/javaScript" src="js/cn/studease/utils/Timer.js"></script>
 	<script type="text/javaScript" src="js/cn/studease/utils/P.js"></script>
