--- a/open/slicease.html
+++ b/open/slicease.html
@@ -5,10 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>StudEase.cn</title>
-	<link rel="shortcut icon" href="favicon.ico">
-	<link rel="stylesheet" type="text/css" href="css/global.css" />
-	<link rel="stylesheet" type="text/css" href="css/prettify.css" />
-	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 600px)" href="css/small.css" />
+	<link rel="shortcut icon" href="../favicon.ico">
+	<link rel="stylesheet" type="text/css" href="../css/global.css" />
+	<link rel="stylesheet" type="text/css" href="../css/prettify.css" />
+	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 600px)" href="../css/small.css" />
 </head>
 <body>
 	<div style='display:none;'>
@@ -20,9 +20,9 @@
 		<path id="icon_prev" fill="#272636" d="M658.29178-191.504117l223.006914 0L398.119373 291.657405 881.298746 812 658.291782 812 175.112507 291.657405 658.29178-191.504117z" transform="translate(0, 812) scale(1, -1)"/>
 		<path id="icon_next" fill="#272636" d="M881.298746 291.657405 398.119373 812 175.112486 812 658.29178 291.657405 175.112507-191.504117l223.006914 0L881.298746 291.657405z" transform="translate(0, 812) scale(1, -1)"/>
 	</svg>
-	<img src='images/contents/img1.png' />
-	<img src='images/contents/img2.png' />
-	<img src='images/contents/img3.png' />
+	<img src='../images/contents/img1.png' />
+	<img src='../images/contents/img2.png' />
+	<img src='../images/contents/img3.png' />
 	</div>
 	
 	<div class='wrap'>
@@ -57,12 +57,12 @@
 				<div id='nav-bar' class='nav-bar'>
 					<div class='container center'>
 						<div class='logo pull-left'>
-							<a href='index.html'>StudEase.cn</a>
+							<a href='../index.html'>StudEase.cn</a>
 						</div>
 						<nav class='nav-menu pull-right'>
 							<ul>
-								<li class='active'>
-									<a href='index.html'>Home</a>
+								<li>
+									<a href='../index.html'>Home</a>
 								</li>
 								<li>
 									<a href="#">Studies<i class='arrow'></i></a>
@@ -78,10 +78,10 @@
 										<li><a href='#'>Tower</a></li>
 									</ul>
 								</li>
-								<li>
+								<li class='active'>
 									<a href="#">Open-sourced<i class='arrow'></i></a>
 									<ul>
-										<li><a target='_self' href='open/slicease.html'>Slicease.js (MIT)</a></li>
+										<li><a target='_self' href='slicease.html'>Slicease.js (MIT)</a></li>
 									</ul>
 								</li>
 								<li>
@@ -103,7 +103,7 @@
 		</header>
 		
 		<div id='main' class="clear">
-			<div id='slicease' class='slicease'>
+			<!--<div id='slicease' class='slicease'>
 				<div class='container relative center'>
 					<canvas id='canvas' width='960' height='500'>Canvas not supported!</canvas>
 					<div class='se-ctrl-pn'>
@@ -122,9 +122,61 @@
 						</ul>
 					</div>
 				</div>
-			</div>
+			</div>-->
 			<div class='container center'>
-				<div class='m-other'></div>
+				<h2>Slicease.js (MIT)</h2>
+				<p>
+					[source] <a href='https://github.com/studease/Slicease'>
+						https://github.com/studease/Slicease
+					</a><br/>
+					[中文教程] <a href="http://blog.csdn.net/icysky1989/article/details/39624155">
+						http://blog.csdn.net/icysky1989/article/details/39624155
+					</a><br/>
+					[CSDN] <a href="http://download.csdn.net/detail/icysky1989/7984519">
+						http://download.csdn.net/detail/icysky1989/7984519
+					</a>
+				</p>
+				<h4>Description</h4>
+				<p>
+					This is a 3D image rotator with animation easing based on Bezier curve, 
+					which was planned as the tile of my proposed website. 
+					<br/><br/>
+					It is built with html5 canvas and pure javascript, and easy to config. 
+					This project is open-sourced with MIT lisence. Enjoy it wherever you like :)
+				</p>
+				<h4>Usage</h4>
+				<p>
+					Include the library under the folder of 'js'. You just need a canvas tag in your html file and make your images ready.
+					Then, as the index.html does, here we go~
+				</p>
+				<p>
+<?prettify lang=javascript linenums=true?>
+<pre class="prettyprint">
+var slicease = new Slicease();
+var markfunc = new Func();
+markfunc.setup(markIndex);
+var config = {
+	canvas_id: 'canvas', 
+	images: ['contents/img1.png', 'contents/img2.png', 'contents/img3.png'], 
+	pieces: [5, 4, 6],
+	mark_func: markfunc
+};
+slicease.setup(config);
+slicease.init();
+slicease.play();
+</pre>
+				</p>
+				<p>
+					The 'pieces' in the config means how many cubes of each image should be separated.
+					'mark_func' must be typed with Func, not just a function.
+					There are more configurations. You can find them marked with 'Available settings' in the main class named 'Slicease'. 
+					Such as 'padding', 'delays', 'duration', etc.
+					Which should be noticed is that 'screen_z' must be closer or smaller than 'object_z'.
+					<br/><br/>
+					There are several cfgs named 'easing_xxx', and you can have a look at the Slicease.init function once you want to 
+					change the easing params or redefine the easing functions. 
+				</p>
+				<br/><br/>
 			</div>
 		</div>
 		
@@ -162,20 +214,20 @@
 			</div>
 		</footer>
 	</div>
-	<script type="text/javaScript" src="js/cn/studease/global.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/utils/Func.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/utils/Timer.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/utils/P.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/animation/RepeatBehavior.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/animation/TimingFunction.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/animation/Animation.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/animation/easing/Bezier.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/animation/easing/CubicBezier.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/animation/easing/Ease.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/animation/easing/Linear.js"></script>
-	<script type="text/javaScript" src="js/cn/studease/slicease/Slicease.js"></script>
-	<script type="text/javascript" src="js/prettify/prettify.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/global.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/utils/Func.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/utils/Timer.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/utils/P.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/animation/RepeatBehavior.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/animation/TimingFunction.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/animation/Animation.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/animation/easing/Bezier.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/animation/easing/CubicBezier.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/animation/easing/Ease.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/animation/easing/Linear.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/slicease/Slicease.js"></script>
+	<script type="text/javascript" src="../js/prettify/prettify.js"></script>
+	<script type="text/javascript" src="../js/main.js"></script>
 	<script>
 		window._bd_share_config = {
 			"common":{"bdSnsKey":{},"bdDesc":"Studease.js 1.0 上线了\\o/ \n项目地址: https://github.com/studease/Slicease","bdText":"StudEase.cn","bdComment":"StudEase.cn已同步更新，猛戳这里看效果!（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）","bdPic":"","bdMini":"2","bdStyle":"0","bdSize":"16"},"share":{},
