--- a/open/slicease.html
+++ b/open/slicease.html
@@ -126,13 +126,13 @@
 			<div class='container center'>
 				<h2>Slicease.js (MIT)</h2>
 				<p>
-					[source] <a href='https://github.com/studease/Slicease'>
+					[source] <a href='https://github.com/studease/Slicease' target='_blank'>
 						https://github.com/studease/Slicease
 					</a><br/>
-					[中文教程] <a href="http://blog.csdn.net/icysky1989/article/details/39624155">
+					[中文教程] <a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>
 						http://blog.csdn.net/icysky1989/article/details/39624155
 					</a><br/>
-					[CSDN] <a href="http://download.csdn.net/detail/icysky1989/7984519">
+					[CSDN] <a href="http://download.csdn.net/detail/icysky1989/7984519" target='_blank'>
 						http://download.csdn.net/detail/icysky1989/7984519
 					</a>
 				</p>
