--- a/index.html
+++ b/index.html
@@ -131,27 +131,48 @@
 		<footer id='footer' class="clear">
 			<div class='footer-main'>
 				<div class='container center'>
-					<div class='friendly-links pull-left'>
-						<h5>Friendly Links</h5>
-					</div>
-					<div class='about-me pull-left'>
-						<h5>About Me</h5>
-					</div>
-					<div class='contact pull-right'>
-						<h5>Contact</h5>
-						<div class='foot-icon'>
-							<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_location'></use></svg>
-						</div>
-						<a>Address: </a><i>ChengDu, China</i>
-						<div class='foot-icon'>
-							<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_phone'></use></svg>
-						</div>
-						<a>Phone: </a><i>182 2408 8983</i>
-						<div class='foot-icon'>
-							<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_email'></use></svg>
-						</div>
-						<a>Email: </a><i>670292548@qq.com</i>
-					</div>
+					<ul>
+						<li>
+							<h5>Friendly Links</h5>
+							<ol>
+								<li>
+									<a href="http://blog.csdn.net/icysky1989" target="_blank">CSDN Blog</a>
+								</li>
+								<li>
+									<a href="https://github.com/studease/Slicease" target="_blank">Slicease.js</a>
+								</li>
+								<li>
+									<a href="http://share.baidu.com/" target="_blank">Baidu Share</a>
+								</li>
+								<li>
+									<a href="https://code.google.com/p/google-code-prettify" target="_blank">Prettify.js</a>
+								</li>
+								<li>
+									<a href="http://iconfont.cn/" target="_blank">Iconfont</a>
+								</li>
+							</ol>
+						</li>
+						<li>
+							<h5>About Me</h5>
+						</li>
+						<li>
+							<h5>Contact</h5>
+							<ul>
+								<li>
+									<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_location'></use></svg>
+									<a>Address: </a><i>ChengDu, China</i>
+								</li>
+								<li>
+									<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_phone'></use></svg>
+									<a>Phone: </a><i>182 2408 8983</i>
+								</li>
+								<li>
+									<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_email'></use></svg>
+									<a>Email: </a><i>670292548@qq.com</i>
+								</li>
+							</ul>
+						</li>
+					</ul>
 				</div>
 			</div>
 			<div class='copyright'>
