--- a/game/square.html
+++ b/game/square.html
@@ -4,10 +4,10 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Slicease.js - StudEase.cn</title>
+	<title>Square - StudEase.cn</title>
 	<link rel="shortcut icon" href="../favicon.ico">
 	<link rel="stylesheet" type="text/css" href="../css/global.css" />
-	<link rel="stylesheet" type="text/css" href="../css/prettify.css" />
+	<link rel="stylesheet" type="text/css" href="../css/gm-sq.css" />
 	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 600px)" href="../css/small.css" />
 </head>
 <body>
@@ -68,17 +68,17 @@
 										<li><a href='#'>Driving</a></li>
 									</ul>
 								</li>
-								<li>
+								<li class='active'>
 									<a href="#">Games<i class='arrow'></i></a>
 									<ul>
-										<li><a href='../game/square.html'>Square</a></li>
+										<li><a href='square.html'>Square</a></li>
 										<li><a href='#'>Tower</a></li>
 									</ul>
 								</li>
-								<li class='active'>
+								<li>
 									<a href="#">Open-sourced<i class='arrow'></i></a>
 									<ul>
-										<li><a href='slicease.html' target='_self'>Slicease.js (MIT)</a></li>
+										<li><a href='../open/slicease.html' target='_self'>Slicease.js (MIT)</a></li>
 									</ul>
 								</li>
 								<li>
@@ -101,59 +101,37 @@
 		
 		<div id='main' class="clear">
 			<div class='container center'>
-				<h2>Slicease.js (MIT)</h2>
-				<p>
-					[source] <a href='https://github.com/studease/Slicease' target='_blank'>
-						https://github.com/studease/Slicease
-					</a><br/>
-					[中文教程] <a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>
-						http://blog.csdn.net/icysky1989/article/details/39624155
-					</a><br/>
-					[CSDN] <a href="http://download.csdn.net/detail/icysky1989/7984519" target='_blank'>
-						http://download.csdn.net/detail/icysky1989/7984519
-					</a>
-				</p>
-				<h4>Description</h4>
-				<p>
-					This is a 3D image rotator with animation easing based on Bezier curve, 
-					which was planned as the tile of my proposed website. 
-					<br/><br/>
-					It is built with html5 canvas and pure javascript, and easy to config. 
-					This project is open-sourced with MIT lisence. Enjoy it wherever you like :)
-				</p>
-				<h4>Usage</h4>
-				<p>
-					Include the library under the folder of 'js'. You just need a canvas tag in your html file and make your images ready.
-					Then, as the index.html does, here we go~
-				</p>
-				<p>
-<?prettify lang=javascript linenums=true?>
-<pre class="prettyprint">
-var slicease = new Slicease();
-var markfunc = new Func();
-markfunc.setup(markIndex);
-var config = {
-	canvas_id: 'canvas', 
-	images: ['contents/img1.png', 'contents/img2.png', 'contents/img3.png'], 
-	pieces: [5, 4, 6],
-	mark_func: markfunc
-};
-slicease.setup(config);
-slicease.init();
-slicease.play();
-</pre>
-				</p>
-				<p>
-					The 'pieces' in the config means how many cubes of each image should be separated.
-					'mark_func' must be typed with Func, not just a function.
-					There are more configurations. You can find them marked with 'Available settings' in the main class named 'Slicease'. 
-					Such as 'padding', 'delays', 'duration', etc.
-					Which should be noticed is that 'screen_z' must be closer or smaller than 'object_z'.
-					<br/><br/>
-					There are several cfgs named 'easing_xxx', and you can have a look at the Slicease.init function once you want to 
-					change the easing params or redefine the easing functions. 
-				</p>
-				<br/><br/>
+				<div class="game-container">
+					<div class="grid-container">
+						<div class="grid-row">
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+						</div>
+							<div class="grid-row">
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+						</div>
+						<div class="grid-row">
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+						</div>
+						<div class="grid-row">
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+							<div class="grid-cell"></div>
+						</div>
+					</div>
+					<div class="tile-container">
+						
+					</div>
+				</div>
 			</div>
 		</div>
 		
@@ -213,10 +191,17 @@ slicease.play();
 		</footer>
 	</div>
 	
-	<script type="text/javascript" src="../js/prettify/prettify.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/utils/Func.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/utils/P.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/gm-sq/Tile.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/gm-sq/Grid.js"></script>
+	<script type="text/javaScript" src="../js/cn/studease/gm-sq/GameManager.js"></script>
 	<script type="text/javascript">
 		window.onload = function(){
-			prettyPrint();
+			var gm = new GameManager();
+			gm.init();
+			gm.listen();
+			
 			
 			var scroll_btn = document.getElementById('scroll_btn');
 			if(scroll_btn){
