--- a/game/square.html
+++ b/game/square.html
@@ -101,6 +101,10 @@
 		
 		<div id='main' class="clear">
 			<div class='container center'>
+				<div class="scores-container">
+					Score: 
+					<div class="score-container"></div>
+				</div>
 				<div class="game-container">
 					<div class="grid-container">
 						<div class="grid-row">
