--- a/game/2048.html
+++ b/game/2048.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>Square - StudEase.cn</title>
+	<title>2048 - StudEase.cn</title>
 	<link rel="shortcut icon" href="../favicon.ico">
 	<link rel="stylesheet" type="text/css" href="../css/global.css" />
 	<link rel="stylesheet" type="text/css" href="../css/gm-sq.css" />
@@ -71,7 +71,7 @@
 								<li class='active'>
 									<a href="#">Games<i class='arrow'></i></a>
 									<ul>
-										<li><a href='square.html'>Square</a></li>
+										<li><a href='2048.html'>2048</a></li>
 										<li><a href='#'>Tower</a></li>
 									</ul>
 								</li>
