--- a/open/slicease.html
+++ b/open/slicease.html
@@ -71,7 +71,7 @@
 								<li>
 									<a href="#">Games<i class='arrow'></i></a>
 									<ul>
-										<li><a href='../game/square.html'>Square</a></li>
+										<li><a href='../game/2048.html'>2048</a></li>
 										<li><a href='#'>Tower</a></li>
 									</ul>
 								</li>
