--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 								<li>
 									<a href="#">Games<i class='arrow'></i></a>
 									<ul>
-										<li><a href='game/square.html' target="_self">Square</a></li>
+										<li><a href='game/2048.html' target="_self">2048</a></li>
 										<li><a href='#'>Tower</a></li>
 									</ul>
 								</li>
