--- a/game/2048.html
+++ b/game/2048.html
@@ -105,6 +105,18 @@
 					Score: 
 					<div class="score-container"></div>
 				</div>
+				<div class="ctrls-container">
+					Control:<BR/>
+					<div class="ctrl-container">
+						UP, DOWN, LEFT, RIGHT<BR/>
+						<i>or</i><BR/>
+						W, S, A, D
+					</div><BR/>
+					Restart:
+					<div class="ctrl-container">
+						R
+					</div>
+				</div>
 				<div class="game-container">
 					<div class="grid-container">
 						<div class="grid-row">
