--- a/open/slicease.html
+++ b/open/slicease.html
@@ -72,21 +72,31 @@
 									<a href="#">Games<i class='arrow'></i></a>
 									<ul>
 										<li><a href='../game/2048.html'>2048</a></li>
+										<li><a href='../game/2048-online.html'>2048-Online</a></li>
 										<li><a href='#'>Tower</a></li>
 									</ul>
 								</li>
 								<li class='active'>
-									<a href="#">Open-sourced<i class='arrow'></i></a>
+									<a href="#">Open<i class='arrow'></i></a>
 									<ul>
-										<li><a href='slicease.html' target='_self'>Slicease.js (MIT)</a></li>
+										<li><a href='slicease.html'>Slicease.js (MIT)</a></li>
 									</ul>
 								</li>
 								<li>
-									<a href="#">Sub Sites<i class='arrow'></i></a>
+									<a href="#">Sub<i class='arrow'></i></a>
 									<ul>
-										<li><a href='http://py.studease.cn/'>Python</a></li>
-										<li><a href='#'>Decoration</a></li>
+										<li><a href='http://sumzee.com/' target='_blank'>Decoration</a></li>
 										<li><a href='#'>Note Trade</a></li>
+										<li><a href='http://py.studease.cn/' target='_blank'>Python</a></li>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Blog<i class='arrow'></i></a>
+									<ul>
+										<li><a href='http://blog.csdn.net/icysky1989' target='_blank'>CSDN Blog</a></li>
+										<li><a href='http://weibo.com/u/5308017583' target='_blank'>Sina Weibo</a></li>
+										<li><a href='http://t.qq.com/lanewalker' target='_blank'>Tencent Weibo</a></li>
+										<li><a href='http://lanewalker.blog.163.com' target='_blank'>163 Blog</a></li>
 									</ul>
 								</li>
 								<li>
@@ -164,6 +174,9 @@ slicease.play();
 						<li>
 							<h5>Friendly Links</h5>
 							<ol>
+								<li>
+									<a href="http://sumzee.com/" target="_blank">sumzee</a>
+								</li>
 								<li>
 									<a href="http://blog.csdn.net/icysky1989" target="_blank">CSDN Blog</a>
 								</li>
