--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								<li>
 									<a href="#">Studies<i class='arrow'></i></a>
 									<ul>
-										<li><a href='#'>Computer-based</a></li>
+										<li><a href='#'>Computer_based</a></li>
 										<li><a href='#'>Driving</a></li>
 									</ul>
 								</li>
@@ -74,31 +74,31 @@
 									<a href="#">Games<i class='arrow'></i></a>
 									<ul>
 										<li><a href='game/2048.html'>2048</a></li>
-										<li><a href='game/2048-online.html'>2048-Online</a></li>
+										<li><a href='game/2048-online.html'>2048_Online</a></li>
 										<li><a href='#'>Tower</a></li>
 									</ul>
 								</li>
 								<li>
 									<a href="#">Open<i class='arrow'></i></a>
 									<ul>
-										<li><a href='open/slicease.html'>Slicease.js (MIT)</a></li>
+										<li><a href='open/slicease.html'>Slicease.js(MIT)</a></li>
 									</ul>
 								</li>
 								<li>
 									<a href="#">Sub<i class='arrow'></i></a>
 									<ul>
-										<li><a href='http://sumzee.com/' target='_blank'>Decoration</a></li>
-										<li><a href='#'>Note Trade</a></li>
+										<li><a href='http://sumzee.com/' target='_blank'>Sumzee_Decor</a></li>
+										<li><a href='#'>Note_Trade</a></li>
 										<li><a href='http://py.studease.cn/' target='_blank'>Python</a></li>
 									</ul>
 								</li>
 								<li>
 									<a href="#">Blog<i class='arrow'></i></a>
 									<ul>
-										<li><a href='http://blog.csdn.net/icysky1989' target='_blank'>CSDN Blog</a></li>
-										<li><a href='http://weibo.com/u/5308017583' target='_blank'>Sina Weibo</a></li>
-										<li><a href='http://t.qq.com/lanewalker' target='_blank'>Tencent Weibo</a></li>
-										<li><a href='http://lanewalker.blog.163.com' target='_blank'>163 Blog</a></li>
+										<li><a href='http://blog.csdn.net/icysky1989' target='_blank'>CSDN_Blog</a></li>
+										<li><a href='http://weibo.com/u/5308017583' target='_blank'>Sina_Weibo</a></li>
+										<li><a href='http://t.qq.com/lanewalker' target='_blank'>Tencent_Weibo</a></li>
+										<li><a href='http://lanewalker.blog.163.com' target='_blank'>163_Blog</a></li>
 									</ul>
 								</li>
 								<li>
@@ -145,7 +145,7 @@
 							<h5>Friendly Links</h5>
 							<ol>
 								<li>
-									<a href="http://sumzee.com/" target="_blank">sumzee</a>
+									<a href="http://sumzee.com/" target="_blank">Sumzee Decor</a>
 								</li>
 								<li>
 									<a href="http://blog.csdn.net/icysky1989" target="_blank">CSDN Blog</a>
