--- a/open/slicease.html
+++ b/open/slicease.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Slicease.js - StudEase.cn</title>
-	<link rel="shortcut icon" href="../favicon.ico">
+	<link rel="shortcut icon" href="../images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="../css/global.css" />
 	<link rel="stylesheet" type="text/css" href="../css/prettify.css" />
 	<link rel="stylesheet" type="text/css" media="screen and (max-device-width: 600px)" href="../css/small.css" />
@@ -136,8 +136,8 @@
 					Include the library under the folder of 'js'. You just need a canvas tag in your html file and make your images ready.
 					Then, as the index.html does, here we go~
 				</p>
-				<p>
-<?prettify lang=javascript linenums=true?>
+
+<?prettify lang=css linenums=true?>
 <pre class="prettyprint">
 var slicease = new Slicease();
 var markfunc = new Func();
@@ -152,7 +152,7 @@ slicease.setup(config);
 slicease.init();
 slicease.play();
 </pre>
-				</p>
+
 				<p>
 					The 'pieces' in the config means how many cubes of each image should be separated.
 					'mark_func' must be typed with Func, not just a function.
@@ -242,10 +242,12 @@ slicease.play();
 		
 		window.onscroll = function(){
 			var top = document.body.scrollTop || document.documentElement.scrollTop;
+			var left = document.body.scrollLeft || document.documentElement.scrollLeft;
 			var nav = document.getElementById('nav-bar');
 			if(top > 36){
 				nav.style.position = 'fixed';
 				nav.style.top = '0px';
+				nav.style.left = -left+'px';
 			}
 			else{
 				nav.style.position = 'static';
