--- a/game/2048.html
+++ b/game/2048.html
@@ -220,7 +220,7 @@
 		
 		<div id="outercopyright">
 			<section id='copyright'>
-				<a>Copyright © 2014 Studease.cn | All Rights Reserved</a>
+				<a>Copyright &copy 2014 Studease.cn | All Rights Reserved</a>
 			</section>
 		</div>
 		
