--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		
 		<div id="outercopyright">
 			<section id='copyright'>
-				<a>Copyright © 2014 Studease.cn | All Rights Reserved</a>
+				<a>Copyright &copy 2014 Studease.cn | All Rights Reserved</a>
 			</section>
 		</div>
 		
