--- a/open/slicease.html
+++ b/open/slicease.html
@@ -210,7 +210,7 @@ slicease.play();
 		
 		<div id="outercopyright">
 			<section id='copyright'>
-				<a>Copyright © 2014 Studease.cn | All Rights Reserved</a>
+				<a>Copyright &copy 2014 Studease.cn | All Rights Reserved</a>
 			</section>
 		</div>
 		
