--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 <script type="text/javaScript" src="js/cn/studease/animation/easing/CubicBezier.js"></script>
 <script type="text/javaScript" src="js/cn/studease/animation/easing/Ease.js"></script>
 <script type="text/javaScript" src="js/cn/studease/animation/easing/Linear.js"></script>
+<script type="text/javaScript" src="js/cn/studease/animation/easing/Elastic.js"></script>
 <script type="text/javaScript" src="js/cn/studease/slicease/Slicease.js"></script>
 <script type="text/javascript">
 	var slicease;
@@ -213,9 +214,10 @@
 		slicease = new Slicease();
 		var markfunc = new Func();
 		markfunc.setup(markIndex);
-		var config = {canvas_id: 'canvas', 
+		var config = {
+			canvas_id: 'canvas', 
 			images: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png'], 
-			pieces: [5, 4, 6],
+			pieces: [8, 10, 11],
 			mark_func: markfunc
 		};
 		slicease.setup(config);
