--- a/open/slicease.html
+++ b/open/slicease.html
@@ -120,6 +120,14 @@
 						http://download.csdn.net/detail/icysky1989/7984519
 					</a>
 				</p>
+				<h4>Latest News</h4>
+				<p>
+					1. Glory of <a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>
+						"22 Best Weekly Web Design & Development Resources"
+					</a> at NEO Design Geeks<i> - Nov. 25, 2014</i><br/>
+					2. Added Elastic, a new animation easing, in the version of 1.0.0.2<i> - Nov. 24, 2014</i><br/>
+					3. Slicease.js 1.0 released<i> - Sep. 28, 2014</i>
+				</p>
 				<h4>Description</h4>
 				<p>
 					This is a 3D image rotator with animation easing based on Bezier curve, 
