--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     		<div class="maincontent">
     			<h4>Latest News</h4>
 				<ul class="latestnews">
-					<li>Slicease.js won a glory of "22 Best Weekly Web Design & Development Resources" at 
+					<li>Slicease.js won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
 						<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>NEO Design Geeks</a> & 
 						<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>Open-Open</a><i> - Nov. 25, 2014</i></li>
 					<li>Implemented the Elastic.js, a new animation easing, in Slicease.js 1.0.0.2<i> - Nov. 24, 2014</i></li>
