--- a/index.html
+++ b/index.html
@@ -137,15 +137,16 @@
 					<li>Slicease.js won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
 						<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>NEO Design Geeks</a> & 
 						<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>Open-Open</a><i> - Nov. 25, 2014</i></li>
-					<li>Implemented the Elastic.js, a new animation easing, in Slicease.js 1.0.0.2<i> - Nov. 24, 2014</i></li>
+					<li>Implemented the Elastic.js, a new animation easing, in 
+						<a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0.0.2<i> - Nov. 24, 2014</i></li>
 					<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a> introduced nearly 100 decoration cases<i> - Nov. 17, 2014</i></li>
 					<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a> beta goes online<i> - Nov. 4, 2014</i></li>
-					<li>2048-Online comes online<i> - Oct. 18, 2014</i></li>
-					<li>1st game named 2048 comes online<i> - Oct. 16, 2014</i></li>
+					<li><a href='http://studease.cn/game/2048-online.html' target='_blank'>2048-Online</a> comes online<i> - Oct. 18, 2014</i></li>
+					<li>1st game which is similar to <a href='http://studease.cn/game/2048.html' target='_blank'>2048</a> comes online<i> - Oct. 16, 2014</i></li>
 					<li>Tutorials of Slicease.js on 
 						<a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>CSDN</a> & 
 						<a href='https://github.com/studease/Slicease' target='_blank'>GitHub</a><i> - Sep. 28, 2014</i></li>
-					<li>Slicease.js 1.0 released<i> - Sep. 28, 2014</i></li>
+					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released<i> - Sep. 28, 2014</i></li>
 					<li>StudEase.cn is available<i> - Sep. 22, 2014</i></li>
 				</ul>
     		</div>
