--- a/index.html
+++ b/index.html
@@ -315,5 +315,10 @@
 	};
 	with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
 </script>
+
+<script type="text/javascript">
+	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F5750633c14e5050fee9c8f4a1679ab2d' type='text/javascript'%3E%3C/script%3E"));
+</script>
 </body>
 </html>
