--- a/open/slicease.html
+++ b/open/slicease.html
@@ -123,8 +123,11 @@
 				<h4>Latest News</h4>
 				<ul class="latestnews">
 					<li>Slicease.js won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
-						<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>NEO Design Geeks</a> & 
-						<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>Open-Open</a><i> - Nov. 25, 2014</i></li>
+						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, 
+						and reprinted by many others, e.g. 
+							<a href="http://www.techinfine.com/Post/177077/22-Best-Weekly-Web-Design-Development-Resources-8" target='_blank'>techinfine.com</a> & 
+							<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>neodesigngeeks.com</a> & 
+							<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a> etc.<i> - Nov. 25, 2014</i></li>
 					<li>Implemented the Elastic.js, a new animation easing, in 
 						<a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0.0.2<i> - Nov. 24, 2014</i></li>
 					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released<i> - Sep. 28, 2014</i></li>
