--- a/open/slicease.iframe.html
+++ b/open/slicease.iframe.html
@@ -106,9 +106,9 @@
 	<path id="icon_prev" fill="#272636" d="M658.29178-191.504117l223.006914 0L398.119373 291.657405 881.298746 812 658.291782 812 175.112507 291.657405 658.29178-191.504117z" transform="translate(0, 812) scale(1, -1)"/>
 	<path id="icon_next" fill="#272636" d="M881.298746 291.657405 398.119373 812 175.112486 812 658.29178 291.657405 175.112507-191.504117l223.006914 0L881.298746 291.657405z" transform="translate(0, 812) scale(1, -1)"/>
 </svg>
-<img src='images/contents/img1.png' />
-<img src='images/contents/img2.png' />
-<img src='images/contents/img3.png' />
+<img src='../images/contents/img1.png' />
+<img src='../images/contents/img2.png' />
+<img src='../images/contents/img3.png' />
 </div>
 
 <div class='wrap'>
