--- a/game/2048.html
+++ b/game/2048.html
@@ -280,7 +280,15 @@
 </script>
 <script>
 	window._bd_share_config = {
-		"common":{"bdSnsKey":{},"bdDesc":"Studease.js 1.0 上线了\\o/ \n项目地址: https://github.com/studease/Slicease","bdText":"StudEase.cn","bdComment":"StudEase.cn已同步更新，猛戳这里看效果!（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）","bdPic":"","bdMini":"2","bdStyle":"0","bdSize":"16"},"share":{},
+		"common":{
+			"bdSnsKey":{},
+			"bdDesc":"一起来玩2048吧，休闲娱乐就要单机畅玩，聊天交友就选双人在线！",
+			"bdText":"StudEase.cn",
+			"bdComment":"（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）",
+			"bdPic":"http://studease.cn/images/contents/effect-2048-online.jpg",
+			"bdMini":"2","bdStyle":"0","bdSize":"16"
+		},
+		"share":{},
 		"image":{"viewList":["qzone","tsina","tqq","sqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},
 		"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","sqq","renren","weixin"]}
 	};
