--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>StudEase.cn</title>
 	<meta name="robots" content="index, follow" />
-    <meta name="keywords" content="" />
+    <meta name="keywords" content="html5,slicease.js,2048,2048 online,chat online" />
     <meta name="description" content="" />
 	<meta name="author" content="Lane Walker" />
 	
