--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<script type='text/javascript' src='js/slicease.min.js'></script>
 </head>
 <body>
 <div style='display:none;'>
@@ -20,12 +21,9 @@
 	<path id="icon_phone" fill="#8a8989" d="M902.4 21.088c8.384 12.928 5.632 30.016-6.272 39.68L732.736 193.76c-5.888 4.672-11.904 7.04-17.984 7.04-11.264 0-20.48-7.68-24.512-12.352l-34.112-35.136c-13.632-13.632-30.528-20.928-48.512-20.928s-36.16 7.168-53.824 21.312c-27.648 22.4-60.416 52.928-91.968 85.632C428.864 271.2 398.08 304.096 375.36 332.064c-27.904 34.816-28.16 73.856-0.576 102.08l36.928 35.776c0.192 0.192 21.184 19.328 3.776 40.96L282.304 674.528c-5.76 7.04-14.208 11.072-23.104 11.072C253.44 685.6 247.68 684 244.16 681.696L239.424 678.112 185.728 627.68l-3.84-4.032c-15.616-20.352-56.96-90.496-42.88-144.384 12.544-47.936 98.752-201.856 218.88-325.056l17.856-17.856c123.392-120.448 277.376-206.656 325.248-219.072 7.36-1.92 15.488-2.944 24.128-2.944 44.224 0 95.744 27.072 118.848 44.736l4.224 3.648 50.24 53.376L902.4 21.088z" transform="translate(0, 812) scale(1, -1)"/>
 	<path id="icon_email" fill="#8a8989" d="M153.341 506.874C174.169 495.79 462.6 314.457 473.333 308.75c10.742-5.712 24.651-8.467 38.667-8.467 14.017 0 27.926 2.755 38.667 8.467 10.735 5.707 299.16 187.04 319.994 198.124C891.5 517.948 911.226 556 872.933 556L151.062 556C112.799 556 132.5 517.948 153.341 506.874zM879.482 438.605c-23.666-12.223-314.324-187.649-328.817-195.126-14.499-7.493-24.649-8.467-38.667-8.467-14.016 0-24.165 0.974-38.667 8.467-14.491 7.477-305.133 182.903-328.817 195.126-16.657 8.593-16.516-1.485-16.516-9.27 0-7.787 0-344.84 0-344.84C128 66.797 151.825 44 170.316 44l683.367 0C872.175 44 896 66.797 896 84.496c0 0 0 337.053 0 344.84C896 437.12 896.157 447.199 879.482 438.605z" transform="translate(0, 812) scale(1, -1)"/>
 	<path id="icon_top" fill="#ffffff" d="M256 620l512 0 0-64-512 0 0 64ZM256 300 384 300 384 44 640 44 640 300 768 300 512 556Z" transform="translate(0, 812) scale(1, -1)"/>
-	<path id="icon_prev" fill="#ffffff" d="M658.29178-191.504117l223.006914 0L398.119373 291.657405 881.298746 812 658.291782 812 175.112507 291.657405 658.29178-191.504117z" transform="translate(0, 812) scale(1, -1)"/>
-	<path id="icon_next" fill="#ffffff" d="M881.298746 291.657405 398.119373 812 175.112486 812 658.29178 291.657405 175.112507-191.504117l223.006914 0L881.298746 291.657405z" transform="translate(0, 812) scale(1, -1)"/>
+	<path id="seskin_prev" fill="#ffffff" d="M658.29178-191.504117l223.006914 0L398.119373 291.657405 881.298746 812 658.291782 812 175.112507 291.657405 658.29178-191.504117z" transform="translate(0, 812) scale(1, -1)"/>
+	<path id="seskin_next" fill="#ffffff" d="M881.298746 291.657405 398.119373 812 175.112486 812 658.29178 291.657405 175.112507-191.504117l223.006914 0L881.298746 291.657405z" transform="translate(0, 812) scale(1, -1)"/>
 </svg>
-<img src='images/contents/img1.png' />
-<img src='images/contents/img2.png' />
-<img src='images/contents/img3.png' />
 </div>
 
 <div class='wrap'>
@@ -105,27 +103,7 @@
     <!-- END HEADER -->
 	
 	<div id='outerslider'>
-		<section id='slidercontainer'>
-			<canvas id='canvas' width='1200' height='500'>Canvas not supported!</canvas>
-			<div class='sliderhover'>
-				<div id='slidetoprev' class='alignleft'>
-					<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_prev'></use></svg>
-				</div>
-				<div id='slidetonext' class='alignright'>
-					<svg viewBox='0 0 1024 1024'><use xlink:href='#icon_next'></use></svg>
-				</div>
-				<div class="clear"></div>
-			</div>
-			<div id='pagercontainer'>
-				<ul class='aligncenter'>
-					<li><a id='indx_0' onclick="javascript:play(0)">1</a></li>
-					<li><a id='indx_1' onclick="javascript:play(1)">2</a></li>
-					<li><a id='indx_2' onclick="javascript:play(2)">3</a></li>
-				</ul>
-				<div class="clear"></div>
-			</div>
-			<div class="clear"></div>
-		</section>
+		<section id='slidercontainer'></section>
 	</div>
 	
 	<!-- MAIN CONTENT -->
@@ -134,6 +112,7 @@
     		<div class="maincontent">
     			<h4>Latest News</h4>
 				<ul class="latestnews">
+					<li>Slicease.js 2.0 released.<i> - Dec. 30, 2015</i></li>
 					<li>Slicease.js won a glory of <b>22 Best Weekly Web Design & Development Resources</b> at 
 						<a href="http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html" target='_blank'>jqueryscript.net</a>, 
 						and reprinted by many others, e.g. 
@@ -218,79 +197,17 @@
 	<!-- END FOOTER -->
 </div>
 
-<script type="text/javaScript" src="js/cn/studease/global.js"></script>
-<script type="text/javaScript" src="js/cn/studease/utils/Func.js"></script>
-<script type="text/javaScript" src="js/cn/studease/utils/Timer.js"></script>
-<script type="text/javaScript" src="js/cn/studease/utils/P.js"></script>
-<script type="text/javaScript" src="js/cn/studease/animation/RepeatBehavior.js"></script>
-<script type="text/javaScript" src="js/cn/studease/animation/TimingFunction.js"></script>
-<script type="text/javaScript" src="js/cn/studease/animation/Animation.js"></script>
-<script type="text/javaScript" src="js/cn/studease/animation/easing/Bezier.js"></script>
-<script type="text/javaScript" src="js/cn/studease/animation/easing/CubicBezier.js"></script>
-<script type="text/javaScript" src="js/cn/studease/animation/easing/Ease.js"></script>
-<script type="text/javaScript" src="js/cn/studease/animation/easing/Linear.js"></script>
-<script type="text/javaScript" src="js/cn/studease/animation/easing/Elastic.js"></script>
-<script type="text/javaScript" src="js/cn/studease/slicease/Slicease.js"></script>
 <script type="text/javascript">
-	var slicease;
-	
 	window.onload = function(){
-		slicease = new Slicease();
-		var markfunc = new Func();
-		markfunc.setup(markIndex);
-		var config = {
-			canvas_id: 'canvas', 
-			images: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png'], 
-			pieces: [8, 10, 11],
-			mark_func: markfunc
-		};
-		slicease.setup(config);
-		slicease.init();
-		slicease.play();
-		
-		var se_prev = document.getElementById('slidetoprev');
-		if(se_prev){
-			se_prev.onclick = function(event){
-				slicease.prev();
-			};
-		}
-		var se_next = document.getElementById('slidetonext');
-		if(se_next){
-			se_next.onclick = function(event){
-				slicease.play();
-			};
-		}
-		
-		
-		var scroll_btn = document.getElementById('scroll-up');
-		if(scroll_btn){
-			scroll_btn.onclick = function(){
-				var left = document.body.scrollLeft || document.documentElement.scrollLeft;
-				window.scrollTo(left, 0);
-			};
-		}
+		var sli = slicease('slidercontainer').setup({
+			width: 1200,
+			height: 500,
+			sources: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png'],
+			canvas: {
+				pieces: [10, 8, 7, 4]
+			}
+		});
 	};
-	
-	function play(n){
-		if(slicease != null){
-			slicease.play(n);
-		}
-	}
-	function markIndex(index){
-		if(index < 0){
-			return;
-		}
-		
-		var pagercontainer = document.getElementById('pagercontainer');
-		pagercontainer.removeChild(pagercontainer.firstChild);
-		
-		var html = "<ul class='aligncenter'>";
-		for(var i=0; i<slicease.images.length; i++){
-			html += "<li><a " + (i==index ? "class='current' " : "") + "onclick='javascript:play("+i+")'>"+(i+1)+"</a></li>";
-		}
-		html += "</ul>";
-		pagercontainer.innerHTML = html;
-	}
 	
 	window.onscroll = function(){
 		var top = document.body.scrollTop || document.documentElement.scrollTop;
