--- a/open/slicease.html
+++ b/open/slicease.html
@@ -161,7 +161,7 @@ var sli = slicease('slidercontainer').setup({
 </pre>
 <br/>
 				<p>
-					......
+					For more configurations, please search for the variables named '_defaults'.
 				</p>
 			</div>
 			<div class="clear"></div>
