--- a/index.html
+++ b/index.html
@@ -123,16 +123,16 @@
 							<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>neodesigngeeks.com</a> & 
 							<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i></li>
 					<li>Implemented the Elastic.js, a new animation easing, in 
-						<a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0.0.2<i> - Nov. 24, 2014</i></li>
-					<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a> introduced nearly 100 decoration cases<i> - Nov. 17, 2014</i></li>
-					<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a> beta goes online<i> - Nov. 4, 2014</i></li>
-					<li><a href='http://studease.cn/game/2048-online.html' target='_blank'>2048-Online</a> comes online<i> - Oct. 18, 2014</i></li>
-					<li>1st game which is similar to <a href='http://studease.cn/game/2048.html' target='_blank'>2048</a> comes online<i> - Oct. 16, 2014</i></li>
-					<li>Tutorials of Slicease.js on 
+						<a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0.02.<i> - Nov. 24, 2014</i></li>
+					<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a> introduced nearly 100 decoration cases.<i> - Nov. 17, 2014</i></li>
+					<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a> beta came online.<i> - Nov. 4, 2014</i></li>
+					<li><a href='http://studease.cn/game/2048-online.html' target='_blank'>2048-Online</a> came online.<i> - Oct. 18, 2014</i></li>
+					<li>1st game which is similar to <a href='http://studease.cn/game/2048.html' target='_blank'>2048</a> came online.<i> - Oct. 16, 2014</i></li>
+					<li>Tutorials of Slicease.js 1.0 on 
 						<a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>CSDN</a> & 
-						<a href='https://github.com/studease/Slicease' target='_blank'>GitHub</a><i> - Sep. 28, 2014</i></li>
-					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released<i> - Sep. 28, 2014</i></li>
-					<li>StudEase.cn is available<i> - Sep. 22, 2014</i></li>
+						<a href='https://github.com/studease/Slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
+					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
+					<li>StudEase.cn is available.<i> - Sep. 22, 2014</i></li>
 				</ul>
     		</div>
 	    	<!--<div id="othercontent"></div>-->
@@ -185,7 +185,7 @@
 		
 		<div id="outercopyright">
 			<section id='copyright'>
-				<a>Copyright &copy 2014-2015 Studease.cn | All Rights Reserved | </a>
+				<a>Copyright &copy 2014-2016 Studease.cn | All Rights Reserved | </a>
 				<script type="text/javascript">
 					var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 					document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F5750633c14e5050fee9c8f4a1679ab2d' type='text/javascript'%3E%3C/script%3E"));
