--- a/open/slicease.html
+++ b/open/slicease.html
@@ -130,8 +130,11 @@
 							<a href="http://www.neodesigngeeks.com/22-best-weekly-web-design-development-resources-8/" target='_blank'>neodesigngeeks.com</a> & 
 							<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i></li>
 					<li>Implemented the Elastic.js, a new animation easing, in 
-						<a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0.0.2<i> - Nov. 24, 2014</i></li>
-					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released<i> - Sep. 28, 2014</i></li>
+						<a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0.02.<i> - Nov. 24, 2014</i></li>
+					<li>Tutorials of Slicease.js 1.0 on 
+						<a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>CSDN</a> & 
+						<a href='https://github.com/studease/Slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
+					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
 				</ul>
 				<h4>Description</h4>
 				<p>
@@ -162,6 +165,10 @@ var sli = slicease('slidercontainer').setup({
 <br/>
 				<p>
 					For more configurations, please search for the variables named '_defaults'.
+				</p>
+				<h4>Modify</h4>
+				<p>
+					Please check the test/index.html for scripts sequence.
 				</p>
 			</div>
 			<div class="clear"></div>
@@ -213,7 +220,7 @@ var sli = slicease('slidercontainer').setup({
 		
 		<div id="outercopyright">
 			<section id='copyright'>
-				<a>Copyright &copy 2014-2015 Studease.cn | All Rights Reserved | </a>
+				<a>Copyright &copy 2014-2016 Studease.cn | All Rights Reserved | </a>
 				<script type="text/javascript">
 					var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
 					document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F5750633c14e5050fee9c8f4a1679ab2d' type='text/javascript'%3E%3C/script%3E"));
