--- a/open/slicease.html
+++ b/open/slicease.html
@@ -157,6 +157,7 @@ var sli = slicease('slidercontainer').setup({
 	width: 1200,
 	height: 500,
 	sources: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png'],
+	renderMode: 'canvas',// default mode
 	canvas: {
 		pieces: [10, 8, 7, 4]
 	}
