--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<li><a href="http://sumzee.com/" target="_blank">Sumzee Decor</a> beta came online.<i> - Nov. 4, 2014</i></li>
 					<li><a href='http://studease.cn/game/2048-online.html' target='_blank'>2048-Online</a> came online.<i> - Oct. 18, 2014</i></li>
 					<li>1st game which is similar to <a href='http://studease.cn/game/2048.html' target='_blank'>2048</a> came online.<i> - Oct. 16, 2014</i></li>
-					<li>Tutorials of Slicease.js 1.0 on 
+					<li>Tutorials of Slicease.js on 
 						<a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>CSDN</a> & 
 						<a href='https://github.com/studease/Slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
 					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
