--- a/open/slicease.html
+++ b/open/slicease.html
@@ -131,7 +131,7 @@
 							<a href="http://www.open-open.com/news/view/19e9ce8" target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i></li>
 					<li>Implemented the Elastic.js, a new animation easing, in 
 						<a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0.02.<i> - Nov. 24, 2014</i></li>
-					<li>Tutorials of Slicease.js 1.0 on 
+					<li>Tutorials of Slicease.js on 
 						<a href="http://blog.csdn.net/icysky1989/article/details/39624155" target='_blank'>CSDN</a> & 
 						<a href='https://github.com/studease/Slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
 					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
