--- a/open/slicease.html
+++ b/open/slicease.html
@@ -276,10 +276,10 @@ var sli = slicease('slidercontainer').setup({
 	window._bd_share_config = {
 		"common":{
 			"bdSnsKey":{},
-			"bdDesc":"Slicease.js荣获jqueryscript.net《本周22个最好网页设计及开发资源》美誉，并被open-open.com、techinfine.com、neodesigngeeks.com等争相转载！",
+			"bdDesc":"Slicease.js 2.0发布",
 			"bdText":"StudEase.cn",
 			"bdComment":"项目地址：https://github.com/studease/Slicease，StudEase.cn已同步更新，猛戳这里看效果！（注：需较新版浏览器支持，推荐chrome, opera, safari, firefox，及相应内核的封装版）",
-			"bdPic":"http://studease.cn/images/contents/effect-slicease.jpg",
+			"bdPic":"http://studease.cn/images/contents/slicease.min.png",
 			"bdMini":"2","bdStyle":"0","bdSize":"16"
 		},
 		"share":{},
