--- a/open/slicease.html
+++ b/open/slicease.html
@@ -136,7 +136,7 @@
 						<a href='https://github.com/studease/Slicease' target='_blank'>GitHub.</a><i> - Sep. 28, 2014</i></li>
 					<li><a href="https://github.com/studease/Slicease" target='_blank'>Slicease.js</a> 1.0 released.<i> - Sep. 28, 2014</i></li>
 				</ul>
-				<h4>Description</h4>
+				<h4>About</h4>
 				<p>
 					This is a 3D image rotator designed for my personal homepage.
 					<br/><br/>
@@ -159,7 +159,7 @@ var sli = slicease('slidercontainer').setup({
 	sources: ['images/contents/img1.png', 'images/contents/img2.png', 'images/contents/img3.png'],
 	renderMode: 'canvas',// default mode
 	canvas: {
-		pieces: [10, 8, 7, 4]
+		pieces: [9, 10, 8, 3]
 	}
 });
 </pre>
